--- a/package.json
+++ b/package.json
@@ -1,26 +1,15 @@
 {
   "name": "userscripts",
   "version": "1.0.0",
-  "browser": "dist/index.js",
   "repository": "https://github.com/f0reachARR/userscripts",
   "author": "f0reachARR <f0reach@f0reach.me>",
   "license": "MIT",
   "scripts": {
-    "build": "parcel build ./index.js"
-  },
-  "targets": {
-    "browser": {
-      "minify": false,
-      "sourceMap": false,
-      "context": "browser",
-      "includeNodeModules": true
-    }
-  },
-  "engines": {
-    "browsers": "> 0.25%"
+    "build": "parcel build --no-source-maps --no-content-hash --no-minify ./index.user.js --out-dir ./dist"
   },
   "devDependencies": {
-    "parcel": "^2.0.0-beta.1"
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-greasemonkey": "^1.0.3"
   },
   "dependencies": {
     "crc-32": "^1.2.0"
