--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "f0reachARR <f0reach@f0reach.me>",
   "license": "MIT",
   "scripts": {
-    "build": "parcel build --no-source-maps --no-content-hash --no-minify ./index.user.js --out-dir ./dist"
+    "build": "parcel build --no-source-maps --no-content-hash --no-minify ./src/index.user.js --out-dir ./dist"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
