--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "build": "parcel build --no-source-maps --no-content-hash --no-minify ./src/index.user.js --out-dir ./dist"
   },
   "devDependencies": {
+    "eslint": "^7.10.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "parcel-bundler": "^1.12.4",
-    "parcel-plugin-greasemonkey": "^1.0.3"
+    "parcel-plugin-greasemonkey": "^1.0.3",
+    "prettier": "^2.1.2"
   },
   "dependencies": {
     "crc-32": "^1.2.0"
