--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "parcel build --no-source-maps --no-content-hash --no-minify ./src/index.user.js --out-dir ./dist"
   },
   "devDependencies": {
+    "babel-polyfill": "^6.26.0",
     "eslint": "^7.10.0",
     "eslint-config-prettier": "^6.12.0",
     "eslint-plugin-prettier": "^3.1.4",
